--- a/less/tocs.less
+++ b/less/tocs.less
@@ -12,7 +12,7 @@
 
 @toc-radius:10px;
 
-.tocs                                         {  padding-top:24px; background:@color-back15; }
+.tocs                                         {  padding-top:24px;  } // background:@color-back15;
 .tocs > div                                   {  }
 .tocs   ul                                    { .mixin-paddings(    0,    0,0,    0); list-style: none none; margin: 0;  }
 .tocs   ul > li                               { .mixin-paddings(0.5em,0.2em,0,0.2em); }
