--- a/less/vars.less
+++ b/less/vars.less
@@ -1,3 +1,4 @@
 
-@color-hue:0;     @color-sat:0%;  @color-lit:30%; @color-inc:12%;
-@layout-west:0;    @layout-north:0; @layout-east:0; @layout-south:0;
+@color-hue:0;          @color-sat:0%;      @color-lit:30%;    @color-inc:12%;
+// @layout-west:120px; @layout-north:60px; @layout-east:60px; @layout-south:60px;
+   @layout-west:0;    @layout-north:0;     @layout-east:0;    @layout-south:0;
