--- a/public/css/jitter.css
+++ b/public/css/jitter.css
@@ -419,7 +419,7 @@ html {
   background-color: #333333;
 }
 .ui-pane {
-  background-color: #4d4d4d;
+  background-color: #856372;
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   z-index: 2;
