--- a/less/ui.less
+++ b/less/ui.less
@@ -10,8 +10,9 @@ html { overflow:hidden; }
 @ui-back20:#856372;
 
 
-.ui-view { width:100%; height:100%; background-color:@ui-back15; }
-.ui-pane { background-color:@ui-back20; position:absolute; .ui-font; z-index:2; overflow:visible; .mixin-round(24px); }
+.ui-view  { width:100%; height:100%; background-color:@ui-back15; }
+.ui-group { background-color:@ui-back20; position:absolute; z-index:1; .mixin-round(24px); }
+.ui-pane  { background-color:@ui-back20; position:absolute; z-index:2; .mixin-round(24px); .ui-font; overflow:visible; }
 
 .ui-pane-center       { position:absolute;  left:15%; top:15%; width:70%; height:70%; z-index:3; display:table; }
 .ui-pane-table        { position:absolute;  left: 5%; top: 5%; width:90%; height:90%; }
@@ -26,6 +27,7 @@ html { overflow:hidden; }
 .ui-pane .panel  { font-family:Roboto, sans-serif; z-index:2; }
 .ui-pane .image  { font-size:2vmin; color:white;   z-index:1;       }
 .ui-pane .label  { font-size:3vmin; color:white; font-weight:bold;  }
+.ui-pane .circle { background-color:@ui-back15; color:white; font-weight:bold;  }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
 .ui-pane .branch { font-size:2vmin; color:white; line-height:3vmin; }
 .ui-pane .roast  { font-size:2vmin; color:white; z-index:2; } //  border:black solid 4px;
@@ -34,6 +36,11 @@ html { overflow:hidden; }
 //.ui-pane  svg    { z-index:2; }
 .ui-pane .txt    { font-size:2vmin; color:white; }
 .ui-pane .img    {}
+
+
+.ui-group-icon       { position:absolute;  display:table; .ui-font; color:white; }
+.ui-group-icon:hover { .mixin-hover; }
+.ui-group-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
 /*
 .ui-pane-study-ul     { list-style:none; margin-left:0.1em;  line-height:1.2; margin-top:0; }
