--- a/less/jitter.less
+++ b/less/jitter.less
@@ -1,4 +1,7 @@
 
-@import   "layout.less"; // Depends on "color.less" and "gradient.less"
-@import   "tocs.less";   // Depends on "color.less" and "gradient.less" and "mixin.less"
-@import   "ui.less";
+@import "layout.less"; // Depends on "color.less" and "gradient.less"
+@import "tocs.less";   // Depends on "color.less" and "gradient.less" and "mixin.less"
+@import "btn.less";
+@import "ui.less";
+@import "fontawesome/fontawesome.less";
+@import "fontawesome/fa-solid.less";
