--- a/less/vars.less
+++ b/less/vars.less
@@ -1,4 +1,5 @@
 
-@color-hue:0;          @color-sat:0%;      @color-lit:30%;    @color-inc:12%;
+//@color-hue:0;          @color-sat:0%;      @color-lit:30%;    @color-inc:12%;
+  @color-hue:330; @color-sat:40%; @color-lit:40%; @color-inc:12%;
 // @layout-west:120px; @layout-north:60px; @layout-east:60px; @layout-south:60px;
    @layout-west:0;    @layout-north:0;     @layout-east:0;    @layout-south:0;
