--- a/less/btn.less
+++ b/less/btn.less
@@ -6,35 +6,37 @@
 @btn-top:    @color-back70; @btn-bot:    @color-back80; @btn-color:    @color-black;
 @btn-hov-top:@color-back60; @btn-hov-bot:@color-back70; @btn-hov-color:@color-black;
 @btn-bord:@color-back50;
-@btn_size:6px;
-@btn-font:Arial, Helvetica, sans-serif;
 
-.btn-font{ font-family:Arial, Helvetica, sans-serif;}
+@btn-unit:1vh;
+@btn-size:            @btn-unit*6;
+@btn-before-size:     @btn-unit*4;
+@btn-font-size:       @btn-unit*2.3;
+@btn-line-height:     @btn-unit*4;
+@btn-pad:             @btn-unit*2;
+@btn-active-top:      @btn-unit*0.6;
+@btn-border-radius:   @btn-unit;
+@btn-box-shadow-thick:@btn-unit;
+@btn-font:Roboto, sans-serif;
+
+.btn-font{ font-family:Roboto, sans-serif;}
 
 
-.btn-base(@btn_size,@top,@bot,@color,@btn-font)
+.btn-base(@btn_size,@top,@bot,@color)
 {
-  .gradient-top(@top,@bot); color:@color; font:@btn-font;
-  font-size:@btn_size; .mixin-round(@btn_size); .mixin-paddings(@btn_size/4,@btn_size/4,@btn_size/4,@btn_size/4);
+  color:@color; .btn-font;  .gradient-top(@top,@bot);
+  font-size:@btn-size; .mixin-round(@btn_size); .mixin-paddings(@btn-pad,@btn-pad,@btn-pad,@btn-pad);
   display:inline; cursor:pointer; text-align:center; vertical-align:middle;
 }
-
-.btn-base-default
- { display: inline; .mixin-round(10px); .gradient-top(@btn-top,@btn-bot);
-   .mixin-paddings(4px,4px,4px,4px); .mixin-margins(4px,4px,4px,4px);
-   text-shadow: 0 -1px 1px rgba(19,65,88,.8); .mixin-shadow(rgba(0,0,0,.1),0,0,3px,0,"");
-   font: 10pt Arial, Helvetica, sans-serif; cursor: pointer; text-align: center;
-   vertical-align: middle; .mixin-border-thin(@btn-bord); }
 
 .btn-base-hover( @top,@bot,@color ) { .gradient-top(@top,@bot); color:@color; }
 
 
-.btn-page { .btn-base(@btn_size*1.25,@btn-top,@btn-bot,@btn-color,@btn-font); }
-.btn-pane { .btn-base(@btn_size*1.00,@btn-top,@btn-bot,@btn-color,@btn-font); }
-.btn-over { .btn-base(@btn_size*0.75,@btn-top,@btn-bot,@btn-color,@btn-font); }
-.btn-form { .btn-base(@btn_size*0.75,@btn-top,@btn-bot,@btn-color,@btn-font); }
-.btn-grid { .btn-base(@btn_size*0.50,@btn-top,@btn-bot,@btn-color,@btn-font); }
-.btn-link { .btn-base(@btn_size*0.50,@btn-top,@btn-bot,@btn-color,@btn-font); }
+.btn-page { .btn-base(@btn-size*1.25,@btn-top,@btn-bot,@btn-color); }
+.btn-pane { .btn-base(@btn-size*1.00,@btn-top,@btn-bot,@btn-color); }
+.btn-over { .btn-base(@btn-size*0.75,@btn-top,@btn-bot,@btn-color); }
+.btn-form { .btn-base(@btn-size*0.75,@btn-top,@btn-bot,@btn-color); }
+.btn-grid { .btn-base(@btn-size*0.50,@btn-top,@btn-bot,@btn-color); }
+.btn-link { .btn-base(@btn-size*0.50,@btn-top,@btn-bot,@btn-color); }
 
 .btn-page:hover { .btn-base-hover(@btn-hov-top,@btn-hov-bot,@btn-hov-color); }
 .btn-pane:hover { .btn-base-hover(@btn-hov-top,@btn-hov-bot,@btn-hov-color); }
@@ -43,27 +45,72 @@
 .btn-grid:hover { .btn-base-hover(@btn-hov-top,@btn-hov-bot,@btn-hov-color); }
 .btn-link:hover { .btn-base-hover(@btn-hov-top,@btn-hov-bot,@btn-hov-color); }
 
+.btn-page i   { padding-right:@btn-pad;  }
+.btn-pane i   { padding-right:@btn-pad; }
+.btn-over i   { padding-right:@btn-pad; }
+.btn-form i   { padding-right:@btn-pad; }
+.btn-grid i   { padding-right:@btn-pad; }
+.btn-link i   { padding-right:@btn-pad; }
+
+
 .btn-base:hover   { color: yellow; }   /* .btn:active  { color: #FFFFFF; background:black } */
 .btn-base a       { color:#000000; text-decoration:none; }
 .btn-base a:hover { color: yellow; }
 
-.btn-push
- { display:inline-block; .mixin-round(8px); .mixin-transition-shadow(2ms,ease-in-out);
-  .mixin-shadow2(@color-back50,0,8px,0,0,rgba(0,0,0,.35),0,15px,20px,0); }
+.btn-cool {
+    transition: all 0s ease-out;
+    height: @btn-size;
+    display: block;
+    .btn-font;
+    font-size: @btn-font-size;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    text-shadow: 0 -@btn-border-radius*0.2 0 rgba(0,0,0,0.4);
+    padding: @btn-pad @btn-pad*2 0;
+    margin: @btn-pad*2 auto;
+    left:   0;
+    position: relative;
+    cursor: pointer;
+    border: none;
+    border-top-right-radius:    @btn-border-radius;
+    border-bottom-right-radius: @btn-border-radius;
+    border-left: solid @btn-border-radius*0.2 #2E4476;
+    background: #3B5999;
+    box-shadow: 0 @btn-unit 0 0 #2E4476;
+}
 
-.btn-push span 
- { display: inline-block; .mixin-paddings(10px,5px,10px,5px); .mixin-round(8px);
-   font-family: "cooper-black-std-1", "cooper-black-std-2", Helvetica, Arial, sans-serif;
-   line-height: 1; text-shadow: 0 -1px 1px rgba(19,65,88,.8); .gradient-top(@color-back50,@color-back70);
-   .mixin-shadow(rgba(255,255,255,.15),0,-1px,1px,0,inset);
-   .mixin-transition-transform(.2s,ease-in-out);  }
 
-.btn-push:active
-  { .mixin-shadow2(@color-back50,0,8px,0,0,rgba(0,0,0,.3),0,12px,10px,0); }
+.btn-cool img { padding-bottom:@btn-pad*1.2; padding-right:@btn-pad; }
+.btn-cool i   { padding-bottom:@btn-pad*1.2; padding-right:@btn-pad;  }
+.btn-cool div { padding-bottom:@btn-pad*1.2; }
 
-.btn-push:active span
-  { .mixin-translate(0,4px); }
+.btn-cool:active, .btn-cool-active {
+  top: @btn-active-top;
+  box-shadow: 0 @btn-pad*0.5 0 0 #2E4476;
+}
 
-.btn-push-mod
-  { .mixin-margins(0,0,0,30px); .mixin-paddings(80px,80px,80px,80px); .mixin-round(30px);
-  text-align: center; .mixin-shadow(rgba(0,0,0,.1),0,0,3px,0,""); }
+.btn-cool:before {
+  content: " ";
+  width:  @btn-size;
+  height: @btn-before-size;
+  display: block;
+  position: absolute;
+  padding-top: @btn-pad;
+  line-height: @btn-line-height;
+  top: 0;
+  margin-left: -@btn-unit*11;
+  font-size: @btn-font-size*0.7;
+  font-weight: bold;
+  border-top-left-radius:    @btn-border-radius;
+  border-bottom-left-radius: @btn-border-radius;
+  border-right: solid @btn-border-radius*0.2 #2E4476;
+  background: #3B5999;
+  box-shadow: 0 @btn-box-shadow-thick 0 0 #2E4476;
+}
+
+.btn-cool:active:before, .btn-cool-active:before {
+  content: "\2713";
+  top: -@btn-active-top;
+  box-shadow: 0 @btn-unit 0 0 #2E4476, @btn-unit @btn-unit @btn-unit*0.2 rgba(0,0,0,0.3);
+}
