--- a/less/jitter.less
+++ b/less/jitter.less
@@ -5,3 +5,4 @@
 @import "ui.less";
 @import "fontawesome/fontawesome.less";
 @import "fontawesome/fa-solid.less";
+@import "fontawesome/fa-regular.less";
