--- a/less/btn.less
+++ b/less/btn.less
@@ -16,7 +16,7 @@
 @btn-unit:1vmin;
 @btn-size:              @btn-unit*6;
 @btn-size-before:       @btn-unit*4;
-@btn-font-size:         @btn-unit*2.0;
+@btn-font-size:         @btn-unit*1.9;
 @btn-font-size-before:  @btn-font-size*0.7;
 @btn-line-height:       @btn-unit*4;
 @btn-pad:               @btn-unit*2;
@@ -25,7 +25,7 @@
 @btn-pad-bottom:        @btn-pad*0.5;
 @btn-margin-left:       @btn-unit*10;
 @btn-top-active:        @btn-unit*0.6;
-@btn-border-radius:     @btn-unit*2.0;
+@btn-border-radius:     @btn-unit*1.7;
 @btn-border-radius-img: @btn-unit;
 @btn-border-thin:       @btn-unit*0.2;
 @btn-shadow:            @btn-unit;
@@ -35,30 +35,30 @@
 
 .btn-nice {
   transition: all 0s ease-out;
-  //height: @btn-size;
   .btn-font;
   font-size: @btn-font-size;
-  color: #fff;
+  color: #000;
   text-decoration: none;
   text-align: center;
   text-shadow: 0 -@btn-border-thin 0 rgba(0,0,0,0.4);
-  padding-left:@btn-pad-two;
+  padding-left:@btn-pad*1.5;
   padding-top:@btn-pad-top;
   padding-bottom:@btn-pad-bottom;
-  left:    0;
-  position: relative;
+  min-width:100%;
+  position:relative; left:0;
   cursor: pointer;
-  border: none;
+  border: solid black 1px;
   border-radius:@btn-border-radius;
   border-left:  solid @btn-border-thin #2E4476;
   background: #3B5999;
-  box-shadow: 0 @btn-unit 0 0 #2E4476;
+  box-shadow: @btn-unit @btn-unit 0 0 #2E4476;
   display: flex;  align-items: center;  justify-content: center;
 }
 
 .btn-nice:active, .btn-nice-active {
-  top:          @btn-top-active;
-  box-shadow: 0 @btn-shadow-active 0 0 #2E4476;
+  top:        @btn-top-active;
+  left:       @btn-top-active;
+  box-shadow: @btn-shadow-active @btn-shadow-active 0 0 #2E4476;
 }
 
 .btn-nice::before { position:absolute; left:@btn-pad; content: " "; }
