Tue 5/10    Back out of Spec Disaster    Renamed Group to Pack    Improved View Pane creation

--- a/less/ikw.less
+++ b/less/ikw.less
@@ -133,10 +133,10 @@
 .ikw-col-icon:hover   { .mixin-hover; }
 .ikw-col-icon > i     { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
-.ikw-group            { position:absolute;  background:@ikw-back10; z-index:1; .mixin-round(24px); }
-.ikw-group-icon       { position:absolute;  display:table; .ikw-font; color:white; }
-.ikw-group-icon:hover { .mixin-hover; }
-.ikw-group-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
+.ikw-pack            { position:absolute;  background:@ikw-back10; z-index:1; .mixin-round(24px); }
+.ikw-pack-icon       { position:absolute;  display:table; .ikw-font; color:white; }
+.ikw-pack-icon:hover { .mixin-hover; }
+.ikw-pack-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
 
 .ikw-all-icon        { position:absolute;  display:table; .ikw-font; z-index:3; }
 .ikw-all-icon:hover  { .mixin-hover; }
