--- a/less/ui.less
+++ b/less/ui.less
@@ -5,32 +5,33 @@ html { overflow:hidden; }
 
 .ui-font{ font-family:Roberto, sans-serif; }
 
-@ui-black: @color-black;
 @ui-back15:@color-gray20;
-@ui-back30:@color-gray30;
+@ui-back20:@color-gray30;
 @ui-back40:@color-gray40;
-@ui-back20:#856372;
+@ui-back50:@color-gray50;
 
-.ui-view { background-color:@ui-back15; width:100%; height:100%; }
+
+.ui-view { width:100%; height:100%; background-color:@ui-back15; }
 .ui-pack { background-color:@ui-back20; position:absolute; z-index:1; .mixin-round(24px); }
-.ui-pane { background-color:@ui-back20; position:absolute; z-index:2; .mixin-round(24px); .ui-font; overflow:visible; }
+.ui-pane { background-color:@ui-back20; position:absolute; z-index:2; overflow:visible; .mixin-round(24px); }
 
 .ui-pane-center       { position:absolute;  left:15%; top:15%; width:70%; height:70%; z-index:3; display:table; }
 .ui-pane-table        { position:absolute;  left: 5%; top: 5%; width:90%; height:90%; }
-.ui-pane-connect > div > ul { .mixin-paddings(20px,0,0,0); margin:0; }
+.ui-pane-arrow > div > ul { .mixin-paddings(20px,0,0,0); margin:0; }
 
-.ui-pane-center-div   { display:table-cell; vertical-align:middle; padding:20px; }
-.ui-pane-icon         { text-align:center; }
+.ui-pane-center-div   { display:table-cell; vertical-align:middle; padding:20px; text-align:center; color:wheat; }
+.ui-pane-icon         { text-align:center; font-size:12vmin; }
 .ui-pane-img          { display:block; margin-left:auto; margin-right:auto; }
-.ui-pane-text         { text-align:center; line-height:1.0; margin-top:4px; }
+.ui-pane-text         { text-align:center; line-height:1.0; margin-top:4px; font-size:3vmin; .ui-font }
 .ui-pane-center-div:hover { .mixin-hover; }
 
 .ui-pane .panel  { font-family:Roboto, sans-serif; z-index:2; }
 .ui-pane .image  { font-size:2vmin; color:white;   z-index:1;       }
 .ui-pane .label  { font-size:3vmin; color:white; font-weight:bold;  }
-.ui-pane .circle { background-color:@ui-back15; color:white; font-weight:bold;  }
 .ui-pane .texts  { font-size:2vmin; color:white; line-height:2vmin; }
 .ui-pane .branch { font-size:2vmin; color:white; line-height:3vmin; }
+
+.ui-pane .circle { background-color:@ui-back15; color:white; font-weight:bold;  }
 .ui-pane .roast  { font-size:2vmin; color:white; z-index:2; } //  border:black solid 4px;
 .ui-pane .roast:hover  { color:wheat; }
 
@@ -46,3 +47,8 @@ html { overflow:hidden; }
 .ui-pack-icon       { position:absolute;  display:table; .ui-font; color:white; }
 .ui-pack-icon:hover { .mixin-hover; }
 .ui-pack-icon > i   { display:table-cell; text-align:center; vertical-align:middle; font-size:20px; }
+
+.ui-pane-ul-content     { position:absolute; left:4%; top:2%; width:auto; height:auto; margin:0; padding:0; list-style:none; .ui-font; }
+.ui-pane-li-content-btn { position:absolute; left:0;  top:0;  width:24px; height:24px; display:inline-table; margin-right:4px; // padding-top:2px; padding-left:2px;
+                           border-radius:12px; z-index:2; color:wheat; background-color:black; } // border: solid 2px wheat;
+.ui-pane-li-content-btn div {  display:table-cell; vertical-align:middle; text-align:center; }
